--- a/cards/scss/style.scss
+++ b/cards/scss/style.scss
@@ -2,3 +2,9 @@
 @import 'buttons';
 @import 'cards';
 @import 'typography';
+
+body {
+    height: 100vh;
+    width: 100vw;
+    background-color: $light-gray;
+}
