--- a/cards/style.css
+++ b/cards/style.css
@@ -1,6 +1,46 @@
+.cards {
+  padding: 0 1rem 0 1rem;
+}
+.cards__card1, .cards__card3, .cards__card2 {
+  background-color: #e38826;
+  height: 70vh;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+.cards__card1-text, .cards__card3-text, .cards__card2-text {
+  line-height: 1.5rem;
+  font-size: 0.8rem;
+  color: rgba(255, 255, 255, 0.75);
+  font-family: "Lexend Deca", sans-serif;
+}
+.cards__cards1-title {
+  font-size: 2rem;
+  font-family: "Big Shoulders Display", cursive;
+  color: white;
+}
+.cards__button {
+  background: none;
+  width: 50%;
+  height: 8vh;
+  border-radius: 50px;
+  background-color: white;
+  border: none;
+  color: #e38826;
+  cursor: pointer;
+  margin-top: 2rem;
+}
+.cards__button:hover {
+  background-color: #e38826;
+  color: white;
+  border: 2px solid white;
+}
+.cards__card2 {
+  background-color: #006970;
+}
+.cards__card3 {
+  background-color: #004241;
+}
 body {
-  height: 100vh;
-  width: 100vw;
   background-color: #f2f2f2;
 }
 
