--- a/cards/style.css
+++ b/cards/style.css
@@ -4,8 +4,11 @@
 .cards__card1, .cards__card3, .cards__card2 {
   background-color: #e38826;
   height: 70vh;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   padding: 1rem;
+}
+.cards__card1-img, .cards__card3-img, .cards__card2-img {
+  margin: 0;
 }
 .cards__card1-text, .cards__card3-text, .cards__card2-text {
   line-height: 1.5rem;
@@ -18,7 +21,7 @@
   font-family: "Big Shoulders Display", cursive;
   color: white;
 }
-.cards__button {
+.cards__button, .cards__button-3, .cards__button-2 {
   background: none;
   width: 50%;
   height: 8vh;
@@ -29,13 +32,25 @@
   cursor: pointer;
   margin-top: 2rem;
 }
-.cards__button:hover {
+.cards__button:hover, .cards__button-3:hover, .cards__button-2:hover {
   background-color: #e38826;
   color: white;
   border: 2px solid white;
 }
 .cards__card2 {
   background-color: #006970;
+}
+.cards__button-2 {
+  color: #006970;
+}
+.cards__button-2:hover {
+  background-color: #006970;
+}
+.cards__button-3 {
+  color: #004241;
+}
+.cards__button-3:hover {
+  background-color: #004241;
 }
 .cards__card3 {
   background-color: #004241;
