--- a/cards/scss/style.scss
+++ b/cards/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'variables-mixin';
 @import 'buttons';
 @import 'cards';
+@import 'responsive';
 
 body {
     background-color: $light-gray;
