--- a/cards/style.css
+++ b/cards/style.css
@@ -55,6 +55,20 @@
 .cards__card3 {
   background-color: #004241;
 }
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  .main {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+  }
+
+  .cards {
+    display: flex;
+  }
+  .cards__button-3 {
+    margin-top: 3.2rem;
+  }
+}
 body {
   background-color: #f2f2f2;
 }
