--- a/cards/scss/_responsive.scss
+++ b/cards/scss/_responsive.scss
@@ -1,4 +1,3 @@
-
 @include d(t) {
    
     .main {
@@ -12,6 +11,29 @@
 
         &__button-3 {
             margin-top: 3.2rem;
+        }
+    }
+}
+
+@include d(desk) {
+
+    .main {
+        height: 95vh;
+    }
+
+    .cards {
+        max-width: 70%;
+
+        &__card1-text {
+            font-size: 1rem;
+            width: 80%;
+        }
+
+        &__card1 {
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
         }
     }
 }
