--- a/cards/scss/_variables-mixin.scss
+++ b/cards/scss/_variables-mixin.scss
@@ -15,11 +15,11 @@ $light-gray: rgb(242, 242, 242);
 
 @mixin d($dispositivo) {
     @if $dispositivo == t {
-        @media only screen and (min-width: 768px) and (max-width: 959px) { 
+        @media only screen and (min-width: 768px) { 
             @content;
         }
-    } @else if $dispositivo == m {
-        @media only acreen and (max-width: 767px) {
+    } @else if $dispositivo == desk {
+        @media only screen and (min-width: 1200px) and (max-width: 2560px) {
             @content;
         }
     }
