--- a/cards/scss/_buttons.scss
+++ b/cards/scss/_buttons.scss
@@ -9,6 +9,7 @@
         color: $orange-card;
         cursor: pointer;
         margin-top: 2rem;
+        transition: .5s ease-out;
     
         &:hover {
             background-color: $orange-card;
