--- a/stats/css/untils/_variables.css
+++ b/stats/css/untils/_variables.css
@@ -1,9 +1,8 @@
 :root {
-
     /*Cores do projeto*/
     --main-blue: hsl(233, 47%, 7%);
     --card-blue: hsl(244, 38%, 16%);
-    --image-purple: hsl(277, 64%, 61%);
+    --purple: hsl(277, 64%, 61%);
     --white: hsl(0, 0%, 100%);
     --paragraph-white: hsla(0, 0%, 100%, 0.75);
     --stat-headings: hsla(0, 0%, 100%, 0.6);
@@ -13,5 +12,6 @@
     --font-family-lexend: 'Lexend', sans-serif;
     --font-size: 15px;
     --font-weight-light: 400;
+    --font-weight-lexend: 600;
     --font-weight-inter: 700;
 }
