--- a/stats/css/style.css
+++ b/stats/css/style.css
@@ -1,6 +1,7 @@
 @import url("./untils/_variables.css");
 @import url("./_card.css");
 @import url("./_typography.css");
+@import url("./_responsive.css");
 
 body {
     background-color: var(--main-blue);
