--- a/order-summary/scss/_card.scss
+++ b/order-summary/scss/_card.scss
@@ -6,8 +6,16 @@
     border-radius: 2%;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh - 20vh);
     justify-content: center;
+    padding: 1rem;
     text-align: center;
     width: 30%;
+
+    &__main {
+        display: flex;
+        flex-direction: column;
+        height: calc(100% - 26.15rem);
+        justify-content: space-between;
+    }
 }
