--- a/order-summary/scss/utils/_variables.scss
+++ b/order-summary/scss/utils/_variables.scss
@@ -1,8 +1,8 @@
 //primary colors
 $paple-blue: hsl(225, 100%, 94%);
 $bright-blue: hsl(245, 75%, 52%);
+$blue-card: hsl(225, 100%, 98%);
 
 //neutral colors
 $white: hsl(0, 0%, 100%);
-$slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
-$slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
+$gray: hsl(224, 23%, 55%);
