--- a/order-summary/style.css
+++ b/order-summary/style.css
@@ -1,6 +1,66 @@
 .card {
-  width: 100%;
+  align-items: center;
+  background-color: white;
+  background-image: url("../assets/images/illustration-hero.svg");
+  background-repeat: no-repeat;
   border-radius: 2%;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 20vh);
+  justify-content: center;
+  padding: 1rem;
+  text-align: center;
+  width: 30%;
+}
+.card__main {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 26.15rem);
+  justify-content: space-between;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+}
+.footer__button {
+  background-color: #3829e0;
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 0.5px 2px 45px 7px #3829e0;
+  color: white;
+  font-size: 1rem;
+  font-weight: 700;
+  height: 8vh;
+  padding: 1rem;
+}
+.footer__link {
+  color: #7280a7;
+}
+
+.plan {
+  background-color: #f5f7ff;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.9rem;
+}
+.plan__annual {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.plan__annual-price {
+  display: flex;
+}
+
+body {
+  background: #e0e8ff url("../assets/images/pattern-background-desktop.svg") no-repeat;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Red Hat Display", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
